--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+body, html {
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+  font-family: 'Segoe UI', sans-serif;
+  background-color: #f4f7f9;
+}
