--- a/src/pages/CompanyDashboard.css
+++ b/src/pages/CompanyDashboard.css
@@ -685,7 +685,7 @@ body {
 }
 .status-btn {
   margin: 6px;
-  padding: 8px 14px;
+  padding: 4px 14px;
   background: #f4f7f9;
   border: 1px solid #0a3d62;
   color: #0a3d62;
@@ -705,6 +705,108 @@ body {
   background-color: var(--btn-color);
   border-color: var(--btn-color);
 }
+.status-dropdown {
+  padding: 6px 10px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  background: #fff;
+  font-weight: 500;
+  cursor: pointer;
+  color: #0a3d62;
+}
+
+.evaluate-button {  padding: 6px 12px;
+  border: 1px solid #0a3d62;
+  border-radius: 8px;
+  background: #f4f7f9;
+  border: 1px solid #0a3d62;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.fade-out-message {
+  opacity: 1;
+  animation: fadeOutSmooth 3s forwards;
+}
+
+@keyframes fadeOutSmooth {
+  0% { opacity: 1; }
+  80% { opacity: 1; }
+  100% {
+    opacity: 0;
+    transform: scale(0.95);
+    display: none;
+  }
+}
+.details-card.fade-out-message {
+  animation: fadeOutSmooth 0.5s forwards;
+}
+.evaluation-input,
+.evaluation-textarea {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px 12px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+  margin-bottom: 12px;
+}
+.close-eval-btn {
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  background: transparent;
+  border: none;
+  font-size: 20px;
+  color: #999;
+  cursor: pointer;
+  transition: color 0.3s ease, transform 0.2s ease;
+}
+
+.close-eval-btn:hover {
+  color: #e55039;
+  transform: scale(1.2);
+}
+.sidebar-footer {
+  margin-top: auto;
+  padding: 20px 18px;
+  /* border-top: 1px solid rgba(255, 255, 255, 0.15); */
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  background-color: #0a3d62;
+}
+
+.sidebar-footer-img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 1px solid #fff;
+  background-image: "/images/bosta.png";
+  background-color: #fff;
+  /* background-size: cover;
+  background-position: center; */
+}
+
+.sidebar-footer-info {
+  color: #ffffff;
+  font-size: 24px;
+  line-height: 1.2;
+}
+
+.sidebar-footer-name {
+  font-weight: 600;
+}
+
+.sidebar-footer-role {
+  font-size: 13px;
+  color: #b0d7f7;
+}
+
+
+
 
 
 
